
- Updated Omnimark syntax highlighting (Lionel Fiol).

}}}
{{{ Miscellaneous

- More flexible remapping of modifier keys (Adrian Baker).

For example, this BeanShell snippet points both the ALT and META
modifiers to A+:

KeyEventTranslator.setModifierMapping(
    InputEvent.CTRL_MASK,
    InputEvent.ALT_MASK | InputEvent.META_MASK,
    0,
    InputEvent.SHIFT_MASK);

- "Java File Save" macro (Nicholas O'Leary).

- Removed usages of show() method deprecated in JDK 1.5.

}}}
{{{ Bug Fixes

- The rest.xml and embperl.xml mode files were missing from the
  distribution.

- HyperSearch results would not use floating positions if the files
  being searched were symbolic links.

- Findbugs suggests changing 'new Boolean(' to 'Boolean.valueOf(', so I
  changed all occurrences in pre14. However, the latter does not exist
  in JDK 1.3. This change was reverted.

- File permission preservation code no longer waits for 'chmod' command
  to exit; since on some Java versions, Process.waitFor() would hang.

- Fix problem if a line had more than 127 screen lines.

- The dirty flag was not cleared if 'redo' was invoked when the redone
  edit was created as part of a compound edit.
}}}

}}}

{{{ Version 4.2pre14

Thanks to Gerd Knops, Ollie Rutherfurd, Paul Libbrecht and Rob Watson
for contributing to this release.

{{{ Miscellaneous Changes

- jEditLauncher no longer included due to a large number of bugs, and
  the fact that it is unmaintained.

- Join Lines (C+j) now inserts a space between joined lines.

- Added some global abbreviations for inserting Greek letters and
  various math symbols (Paul Libbrecht).

- The buffer state icons and window icon can now be customized with
  icon themes.

}}}
{{{ Syntax Highlighting

- PL/I syntax highlighting (Rob Watson).

- Embperl syntax highlighting (Ollie Rutherfurd).

- reStructuredText syntax highligting (Ollie Rutherfurd).

- Fix an issue with SSI directives in SHTML files.

}}}
{{{ Bug Fixes
